# lyric-mining

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.py  lstm.ipynb  pytorch-gru-textgen.py
tests/: test_txt2txt_ebc.py
txt2txt_ebc/: data_process.py
